Added more results to Markov

--- a/code/MarkowAutoComplete_FinalProject.ipynb
+++ b/code/MarkowAutoComplete_FinalProject.ipynb
@@ -616,7 +616,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## On Generated text "
+    "## 1. On Generated text (generated Brown and Guttenberg)"
    ]
   },
   {
@@ -625,18 +625,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle_gut = open(\"generated_text_guten.pickle\",\"rb\")\n",
-    "gen_text_gut = pickle.load(pickle_gut)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle_brow = open(\"generated_text_brown.pickle\",\"rb\")\n",
-    "gen_text_brown = pickle.load(pickle_brow)"
+    "# reading the generated data to used as input for models \n",
+    "\n",
+    "gen_text_gut = pickle.load(open(\"generated_text_guten.pickle\",\"rb\"))\n",
+    "gen_text_brown = pickle.load(open(\"generated_text_brown.pickle\",\"rb\"))"
    ]
   },
   {
@@ -712,10 +704,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving the train data \n",
     "with open('generated_text_guten_joined.pickle', 'wb') as f:\n",
     "    pickle.dump(gutten_corpus_train, f)\n",
     "with open('generated_text_brown_joined.pickle', 'wb') as f:\n",
     "    pickle.dump(brown_corpus_train, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing generated **Brown** and **Guttenberg** corpus using 3-gram"
    ]
   },
   {
@@ -739,6 +739,13 @@
    "source": [
     "test_gutten = gen_text_gut[-1000:]\n",
     "test_brown  = gen_text_brown[-1000:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting the first two tokens of test set "
    ]
   },
   {
@@ -768,6 +775,13 @@
    "source": [
     "print(test_gutten[0], start_tokens_gutten[0])\n",
     "print(test_brown[0], start_tokens_brown[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating sentences using first two tokens of original sentences"
    ]
   },
   {
@@ -842,79 +856,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the results to pickle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Writing to pickle to save resutls\n",
-    "with open('test_orig_gutten.pickle', 'wb') as f:\n",
+    "with open('../data/test_orig_gutten.pickle', 'wb') as f:\n",
     "    pickle.dump(test_gutten, f)\n",
-    "with open('test_orig_brown.pickle', 'wb') as f:\n",
+    "with open('../data/test_orig_brown.pickle', 'wb') as f:\n",
     "    pickle.dump(test_brown, f)\n",
     "\n",
-    "with open('test_gen_gutten.pickle', 'wb') as f:\n",
+    "with open('../data/test_gen_gutten.pickle', 'wb') as f:\n",
     "    pickle.dump(gen_test_gutten, f)\n",
-    "with open('test_gen_brown.pickle', 'wb') as f:\n",
+    "with open('../data/test_gen_brown.pickle', 'wb') as f:\n",
     "    pickle.dump(gen_test_brown, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 397,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#reading pickle\n",
-    "\n",
-    "temp = open(\"test_orig_gutten.pickle\",\"rb\")\n",
-    "test_gutten = pickle.load(temp)\n",
-    "\n",
-    "temp = open(\"test_orig_brown.pickle\",\"rb\")\n",
-    "test_brown = pickle.load(temp)\n",
-    "\n",
-    "temp = open(\"test_gen_gutten.pickle\",\"rb\")\n",
-    "gen_test_gutten = pickle.load(temp)\n",
-    "\n",
-    "temp = open(\"test_gen_brown.pickle\",\"rb\")\n",
-    "gen_test_brown = pickle.load(temp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guttenberg contains 1000 generated text. Sample :\n",
-      "Original sentence : why should you think me a\n",
-      "Generated sentence : why should you think me a\n",
-      "\n",
-      "Brown contains 1000 generated text. Sample :\n",
-      "Original sentence : once again the way to the\n",
-      "Generated sentence : once again he smith and if\n"
-     ]
-    }
-   ],
-   "source": [
-    "sample_n = int(np.random.choice(np.arange(1000),1))\n",
-    "print(f\"Guttenberg contains {len(test_gutten)} generated text. Sample :\")\n",
-    "print(f\"Original sentence : {test_gutten[sample_n]}\")\n",
-    "print(f\"Generated sentence : {' '.join(gen_test_gutten[sample_n])}\")\n",
-    "\n",
-    "print(f\"\\nBrown contains {len(test_brown)} generated text. Sample :\")\n",
-    "print(f\"Original sentence : {test_brown[sample_n]}\")\n",
-    "print(f\"Generated sentence : {' '.join(gen_test_brown[sample_n])}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## On Real data (IMDB Movie plots)"
+    "### Printing the results for **Guttenberg** and **Brown**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Results for Brown:\n",
+      "\n",
+      "Original  : about it . i am sure\n",
+      "Generated : about it . i am sure\n",
+      "\n",
+      "Original  : as she had been in the\n",
+      "Generated : as she had been in the\n",
+      "\n",
+      "Original  : certainly not . i am sure\n",
+      "Generated : certainly not . i am sure\n",
+      "\n",
+      "Original  : indeed ! and i am sure\n",
+      "Generated : indeed ! and i am sure\n",
+      "\n",
+      "Original  : that she had been in the\n",
+      "Generated : that she had been in the\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_test_gutten = pickle.load(open(\"../data/test_gen_gutten.pickle\",\"rb\"))\n",
+    "test_gutten = pickle.load(open(\"../data/test_orig_gutten.pickle\",\"rb\"))\n",
+    "gen_test_gutten = [\" \".join(item) for item in gen_test_gutten]\n",
+    "\n",
+    "\n",
+    "sample_ = np.random.choice(np.arange(len(test_brown)),5, replace=False)\n",
+    "print(\"\\nResults for Brown:\\n\")\n",
+    "for i in range(5):\n",
+    "    print(f\"Original  : {test_gutten[int(sample_[i])]}\")\n",
+    "    print(f\"Generated : {gen_test_gutten[int(sample_[i])]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Results for Brown:\n",
+      "\n",
+      "Original  : sometimes he would have been a\n",
+      "Generated : sometimes he was not in the\n",
+      "\n",
+      "Original  : with the same time . the\n",
+      "Generated : with the same time . lucy\n",
+      "\n",
+      "Original  : all the way to the editor\n",
+      "Generated : all the world . elinor was\n",
+      "\n",
+      "Original  : those who have been a good\n",
+      "Generated : those who had not been able\n",
+      "\n",
+      "Original  : in the world . the first\n",
+      "Generated : in the world . elinor was\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_brown = pickle.load(open(\"../data/test_orig_brown.pickle\",\"rb\"))\n",
+    "gen_test_brown = pickle.load(open(\"../data/test_gen_brown.pickle\",\"rb\"))\n",
+    "gen_test_brown = [\" \".join(item) for item in gen_test_brown]\n",
+    "\n",
+    "\n",
+    "sample_ = np.random.choice(np.arange(len(test_brown)),5, replace=False)\n",
+    "print(\"\\nResults for Brown:\\n\")\n",
+    "for i in range(5):\n",
+    "    print(f\"Original  : {test_brown[int(sample_[i])]}\")\n",
+    "    print(f\"Generated : {gen_test_brown[int(sample_[i])]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****\n",
+    "## 2. On Real data (IMDB Movie plots)"
    ]
   },
   {
@@ -935,7 +1009,7 @@
    ],
    "source": [
     "# for real data using IMDB Movie plots\n",
-    "pickle_in = open(\"plots_text.pickle\",\"rb\")\n",
+    "pickle_in = open(\"../data/plots_text.pickle\",\"rb\")\n",
     "movie_plots = pickle.load(pickle_in)\n",
     "\n",
     "# count of movie plot summaries\n",
@@ -948,6 +1022,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#processing the data step 1\n",
     "plot_corpus = [re.sub(\"[^a-z'\\. ]\", \"\", i) for i in movie_plots]"
    ]
   },
@@ -965,7 +1040,7 @@
     }
    ],
    "source": [
-    "#function to extract sentence from the corpus\n",
+    "#function to extract sentence from the corpus for test cases\n",
     "sentences_plot = []\n",
     "for i in range(len(plot_corpus)):\n",
     "    sents = (re.split(pattern, plot_corpus[i]))\n",
@@ -979,6 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#processing the data step 2\n",
     "#Removing the fullstop and merging all sentences and creating tokens\n",
     "plot_corpus = [re.sub(\"[^a-z' ]\", \"\", i) for i in plot_corpus]\n",
     "plot_corpus = \" \".join(plot_corpus).split()"
@@ -1013,6 +1089,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing all the Movie plots dataset to create 3-gram dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 404,
    "metadata": {},
@@ -1021,6 +1104,13 @@
     "# Processing the corpus\n",
     "ac_m = autoComplete()\n",
     "ac_m.pre_process_corpus(plot_corpus, n_gram_len=3, top_n=100, show_status=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating sentences using first two tokens of randomly selected 1000 sentences"
    ]
   },
   {
@@ -1091,19 +1181,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the results to pickle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 466,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test_orig_plot.pickle', 'wb') as f:\n",
+    "with open('../data/test_orig_plot.pickle', 'wb') as f:\n",
     "    pickle.dump(subset_sentences, f)\n",
     "\n",
-    "with open('test_gen_plot_restricted.pickle', 'wb') as f:\n",
+    "with open('../data/test_gen_plot_restricted.pickle', 'wb') as f:\n",
     "    pickle.dump(gen_test_plot, f)\n",
     "    \n",
-    "with open('test_gen_plot_unrestricted.pickle', 'wb') as f:\n",
+    "with open('../data/test_gen_plot_unrestricted.pickle', 'wb') as f:\n",
     "    pickle.dump(gen_test_plot_unresitricted, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Printing the results for Movie plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Results for Movie plot:\n",
+      "\n",
+      "Original  : meanwhile hsiao in a grave robbery attempt accidentally awakens a female corpse  who eventually turns out to be the marshal's  wife.\n",
+      "Generated : meanwhile hsiao in a car accident all of the film ends with a large sum of money he discovers that the man\n",
+      "\n",
+      "Original  : this leads to a running joke in the torture chamber as henry keeps changing his mind about the confession due to political necessities requiring multiple changes and retractions of the original confession.\n",
+      "Generated : this leads to a nearby bus station and also a bit awkwardly jrgen stalls the negotiations relating to deceased crew members as\n",
+      "\n",
+      "Original  : it sensitively portrays the struggles of a father whose main priority in life is the wellbeing of his children and who is determined to see his children grow up to become decent successful people.\n",
+      "Generated : it sensitively portrays the conservative pan indian socio cultural life where he is not the only one who was the only one\n",
+      "\n",
+      "Original  : ibrahim is a year old muslim born in belgium.\n",
+      "Generated : ibrahim is a film about a bumbling searchlight unit during world war ii developing the idea of destroying the helicopter blair has\n",
+      "\n",
+      "Original  : the trio escape into the wilderness after accidentally revealing the location of no.\n",
+      "Generated : the trio escape into the house and after a few days later they disappear and take them to the house and after\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_plot = pickle.load(open('../data/test_orig_plot.pickle','rb'))\n",
+    "gen_test_plot = pickle.load(open(\"../data/test_gen_plot_unrestricted.pickle\",\"rb\"))\n",
+    "gen_test_plot = [\" \".join(item) for item in gen_test_plot]\n",
+    "\n",
+    "\n",
+    "sample_ = np.random.choice(np.arange(len(test_brown)),5, replace=False)\n",
+    "print(\"\\nResults for Movie plot:\\n\")\n",
+    "for i in range(5):\n",
+    "    print(f\"Original  : {test_plot[int(sample_[i])]}\")\n",
+    "    print(f\"Generated : {gen_test_plot[int(sample_[i])]}\\n\")"
    ]
   },
   {
